# my-web-framework

./: README.md  pyproject.toml
.fleet/: run.json
my_web_framework/: annotations.py  api.py  controller.py  exceptions.py  main.py
my_web_framework/adapters/: base_adapter.py  fastapi_adapter.py
my_web_framework/examples/: 01-simple.py  02-limit.py  03-limit-with-parameter copy.py  04-limit-custom-annotation.py
my_web_framework/plugins/: _base.py  awesome.py  rate_limiter.py
my_web_framework/plugins/rate_limiter/: __init__.py  annotations.py  exceptions.py  plugin.py
