[tool.poetry]
name = "my-web-framework"
version = "0.1.0"
description = ""
authors = ["Igor Nikolaev <igor.nikolaev@nikisoft.ru>"]
readme = "README.md"
packages = [{include = "my_web_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
limits = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
