[tool.poetry]
name = "my-web-framework"
version = "0.1.0"
description = ""
authors = ["Igor Nikolaev <igor.nikolaev@nikisoft.ru>"]
readme = "README.md"
packages = [{include = "my_web_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
limits = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs/settings/#select
select = ["ALL"]
# https://beta.ruff.rs/docs/settings/#show-fixes
show-fixes = true
# https://beta.ruff.rs/docs/settings/#line-length
line-length = 119
# https://beta.ruff.rs/docs/settings/#target-version
target-version = "py310"
# https://beta.ruff.rs/docs/settings/#exclude
exclude = [
    ".bzr",
    ".data",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore = ["ANN101", "D"]
